bugfix/ETSL-536 changes for navigation card alignments

--- a/ui.frontend/src/main/webpack/etisalat/styles/teaservariants.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/teaservariants.scss
@@ -82,10 +82,6 @@ line-height: 1.3 !important;
 }
 @media (min-width:375px) and (max-width:900px) {
 	.greybg-container, .whitebg-container  {
-		.cmp-teaser {
-			display: flex;
-			flex-direction: column-reverse;
-		}
 		.cmp-teaser__title {
 			font-size: 22px;
 		}
@@ -446,4 +442,12 @@ line-height: 1.3 !important;
 			  width: 100%!important;
 		   }
 		}
+	}
+	@media (min-width: 360px) and (max-width: 768px) {
+		.cmp-center-card{
+		.cmp-teaser__action-container a{
+			top:20px;
+			position: relative;
+		}
+	   }
 	}
